Refatoraçoes no codigo